Fix result display bugs
Fix %s bug from returning to trip page from itinerary page

Standardize format for result display text for all command usage messages 

Remove `list` command
Fix result display bugs

--- a/src/main/resources/view/journal/JournalPageCard.fxml
+++ b/src/main/resources/view/journal/JournalPageCard.fxml
@@ -26,7 +26,9 @@
                 <Label fx:id="entryTime" styleClass="label-entry-metadata" text="\$entryTime" />
                 <Region prefHeight="40.0" />
                 <HBox alignment="CENTER_RIGHT" prefHeight="40.0" prefWidth="200.0" styleClass="hBox-feeling" HBox.hgrow="ALWAYS">
-                    <Label fx:id="entryFeeling" styleClass="label-feeling" text="\$entryFeeling" />
+
+                    <!-- If feeling not specified, will show nothing -->
+                    <Label fx:id="entryFeeling" styleClass="label-feeling" />
                 </HBox>
             </HBox>
 
