--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.Scene?>
 <?import javafx.stage.Stage?>
+<?import javafx.scene.control.ScrollPane?>
 <fx:root minHeight="600" minWidth="450" onCloseRequest="#handleExit" title="Volant" type="javafx.stage.Stage"
          xmlns="http://javafx.com/javafx/11.0.0" xmlns:fx="http://javafx.com/fxml/1">
   <icons>
@@ -22,42 +23,45 @@
         <URL value="@Extensions.css" />
       </stylesheets>
 
-      <VBox>
-        <!--  MENU BAR  -->
-        <MenuBar fx:id="menuBar" VBox.vgrow="NEVER">
-          <Menu mnemonicParsing="false" text="File">
-            <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit" />
-          </Menu>
-          <Menu mnemonicParsing="false" text="Help (F1)">
-            <MenuItem fx:id="helpMenuItem" mnemonicParsing="false" onAction="#handleHelp" text="Help" />
-          </Menu>
-          <Menu mnemonicParsing="false" text="Refresh (F5)">
-            <MenuItem fx:id="refreshMenuItem" mnemonicParsing="false" onAction="#handleRefresh" text="Refresh" />
-          </Menu>
-        </MenuBar>
+        <VBox>
+          <!--  MENU BAR  -->
+          <MenuBar fx:id="menuBar" VBox.vgrow="NEVER">
+            <Menu mnemonicParsing="false" text="File">
+              <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit" />
+            </Menu>
+            <Menu mnemonicParsing="false" text="Help (F1)">
+              <MenuItem fx:id="helpMenuItem" mnemonicParsing="false" onAction="#handleHelp" text="Help" />
+            </Menu>
+            <Menu mnemonicParsing="false" text="Refresh (F5)">
+              <MenuItem fx:id="refreshMenuItem" mnemonicParsing="false" onAction="#handleRefresh" text="Refresh" />
+            </Menu>
+          </MenuBar>
 
-        <!--  MAIN PANEL: THIS SWITCHES WITH EVERY NAVIGATION COMMAND -->
-        <VBox fx:id="mainPanel" minWidth="340" prefWidth="340" styleClass="pane-with-border" VBox.vgrow="ALWAYS">
-          <StackPane fx:id="mainPanelPlaceholder" VBox.vgrow="ALWAYS" />
+          <!--  MAIN PANEL: THIS SWITCHES WITH EVERY NAVIGATION COMMAND -->
+          <ScrollPane fx:id="scrollPane">
+            <VBox fx:id="mainPanel" minWidth="340" prefWidth="340" styleClass="pane-with-border" VBox.vgrow="ALWAYS">
+              <StackPane fx:id="mainPanelPlaceholder" VBox.vgrow="ALWAYS" />
+            </VBox>
+          </ScrollPane>
+
+
+          <!--  RESULT DISPLAY: APP FEEDBACK MESSAGES APPEAR HERE -->
+          <StackPane fx:id="resultDisplayPlaceholder" styleClass="stackPane-ResultBox" maxHeight="100" minHeight="100" prefHeight="100" VBox.vgrow="NEVER">
+            <padding>
+              <Insets bottom="5" left="10" right="10" top="5" />
+            </padding>
+          </StackPane>
+
+          <!--  COMMAND BOX: USER INPUT TEXT BOX -->
+          <StackPane fx:id="commandBoxPlaceholder" styleClass="stackPane-CommandBox " VBox.vgrow="NEVER">
+            <padding>
+              <Insets bottom="5" left="10" right="10" top="5" />
+            </padding>
+          </StackPane>
+
+          <!--  STATUS BAR  -->
+          <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER" />
         </VBox>
-
-        <!--  RESULT DISPLAY: APP FEEDBACK MESSAGES APPEAR HERE -->
-        <StackPane fx:id="resultDisplayPlaceholder" styleClass="stackPane-ResultBox" maxHeight="100" minHeight="100" prefHeight="100" VBox.vgrow="NEVER">
-          <padding>
-            <Insets bottom="5" left="10" right="10" top="5" />
-          </padding>
-        </StackPane>
-
-        <!--  COMMAND BOX: USER INPUT TEXT BOX -->
-        <StackPane fx:id="commandBoxPlaceholder" styleClass="stackPane-CommandBox " VBox.vgrow="NEVER">
-          <padding>
-            <Insets bottom="5" left="10" right="10" top="5" />
-          </padding>
-        </StackPane>
-
-        <!--  STATUS BAR  -->
-        <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER" />
-      </VBox>
 
     </Scene>
   </scene>
