--- a/src/main/resources/view/home/HomePage.fxml
+++ b/src/main/resources/view/home/HomePage.fxml
@@ -23,9 +23,9 @@
          <Label styleClass="label-header" text="UPCOMING TRIPS" />
       </children>
    </StackPane>
-   <ListView fx:id="tripListViewUpcoming" prefWidth="247.0" style="-fx-background-color: #fff;" VBox.vgrow="ALWAYS" />
+   <ListView fx:id="tripListViewUpcoming" prefWidth="247.0" style="-fx-background-color: #fff; -fx-border-width: 1px 0px 2px 0px;" VBox.vgrow="ALWAYS" />
 
-   <StackPane prefHeight="15.0" prefWidth="200.0" styleClass="trip-list-header" style="-fx-border-width: 2px 0px 2px 0px" VBox.vgrow="NEVER">
+   <StackPane prefHeight="15.0" prefWidth="200.0" styleClass="trip-list-header" style="-fx-border-width: 1px 0px 2px 0px;" VBox.vgrow="NEVER">
       <children>
          <Label styleClass="label-header" text="PAST TRIPS" />
       </children>
