--- a/src/main/resources/view/home/HomePage.fxml
+++ b/src/main/resources/view/home/HomePage.fxml
@@ -4,20 +4,23 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<VBox xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1">
+
+<VBox xmlns="http://javafx.com/javafx/11.0.0" xmlns:fx="http://javafx.com/fxml/1">
+   <!-- WELCOME MESSAGE -->
    <StackPane prefHeight="30.0" prefWidth="200.0" styleClass="stack-welcome" VBox.vgrow="NEVER">
       <children>
-
-         <!-- WELCOME MESSAGE -->
          <Label styleClass="label-welcome" text="Hi! I'm Volant :)" />
       </children>
    </StackPane>
-   <StackPane prefHeight="15.0" prefWidth="200.0" styleClass="stack-header" VBox.vgrow="NEVER">
+
+   <!-- PAGE HEADER -->
+   <StackPane prefHeight="15.0" prefWidth="200.0" styleClass="stack-header" style="-fx-border-width: 1px 0px 2px 0px" VBox.vgrow="NEVER">
       <children>
         <Label styleClass="label-header" text="TRIP LIST" />
       </children>
    </StackPane>
 
+   <!-- UPCOMING TRIPS HEADER -->
    <StackPane prefHeight="15.0" prefWidth="200.0" styleClass="trip-list-header" style="-fx-border-width: 0px 0px 2px 0px" VBox.vgrow="NEVER">
       <children>
          <Label styleClass="label-header" text="UPCOMING TRIPS" />
@@ -25,12 +28,12 @@
    </StackPane>
    <ListView fx:id="tripListViewUpcoming" prefWidth="247.0" style="-fx-background-color: #fff; -fx-border-width: 1px 0px 2px 0px;" VBox.vgrow="ALWAYS" />
 
-   <StackPane prefHeight="15.0" prefWidth="200.0" styleClass="trip-list-header" style="-fx-border-width: 1px 0px 2px 0px;" VBox.vgrow="NEVER">
+   <!-- PAST TRIPS HEADER -->
+   <StackPane prefHeight="15.0" prefWidth="200.0" styleClass="trip-list-header" style="-fx-border-width: 0px 0px 2px 0px;" VBox.vgrow="NEVER">
       <children>
          <Label styleClass="label-header" text="PAST TRIPS" />
       </children>
    </StackPane>
-
    <ListView fx:id="tripListViewPast" prefWidth="247.0" style="-fx-background-color: #fff;" VBox.vgrow="ALWAYS" />
 
 </VBox>
