--- a/src/main/resources/view/journal/JournalPage.fxml
+++ b/src/main/resources/view/journal/JournalPage.fxml
@@ -10,5 +10,5 @@
           <Label fx:id="journalTitle" styleClass="label-header" />
       </children>
    </StackPane>
-    <ListView fx:id="entryListView" VBox.vgrow="ALWAYS" />
+    <ListView fx:id="entryListView" VBox.vgrow="ALWAYS" minHeight="600"/>
 </VBox>
