--- a/src/main/resources/view/VolantTheme.css
+++ b/src/main/resources/view/VolantTheme.css
@@ -40,12 +40,12 @@
 }
 
 .text-area .content {
-    -fx-background-color: transparent, white, transparent, white;
+    -fx-background-color: transparent, #fff, transparent, #fff;
     -fx-font-size: 10px;
 }
 
 .text-area:focused .content {
-    -fx-background-color: transparent, white, transparent, white;
+    -fx-background-color: transparent, #fff, transparent, #fff;
     -fx-font-size: 10px;
 }
 
@@ -158,7 +158,7 @@
 .table-view .column-header .label {
     -fx-font-size: 20pt;
     -fx-font-family: "Roboto Mono";
-    -fx-text-fill: white;
+    -fx-text-fill: #fff;
     -fx-alignment: center-left;
     -fx-opacity: 1;
 }
@@ -199,7 +199,7 @@
 }
 
 .list-cell:filled:selected {
-    -fx-background-color: white;
+    -fx-background-color: #fff;
 }
 
 .list-cell:filled:selected #cardPane {
@@ -355,7 +355,7 @@
 .button:disabled, .button:default:disabled {
     -fx-opacity: 0.4;
     -fx-background-color: #1d1d1d;
-    -fx-text-fill: white;
+    -fx-text-fill: #fff;
 }
 
 .button:default {
@@ -377,7 +377,7 @@
 .dialog-pane > *.label.content {
     -fx-font-size: 14px;
     -fx-font-weight: bold;
-    -fx-text-fill: white;
+    -fx-text-fill: #fff;
 }
 
 .dialog-pane:header *.header-panel {
@@ -387,8 +387,8 @@
 .dialog-pane:header *.header-panel *.label {
     -fx-font-size: 18px;
     -fx-font-style: italic;
-    -fx-fill: white;
-    -fx-text-fill: white;
+    -fx-fill: #fff;
+    -fx-text-fill: #fff;
 }
 
 
@@ -410,8 +410,8 @@
 
 .scroll-bar .increment-button,
 .scroll-bar .decrement-button {
-    -fx-background-color: white;
-    -fx-background-insets: white;
+    -fx-background-color: #fff;
+    -fx-background-insets: 0;
     -fx-border-color: black;
     -fx-border-width: 1px 1px 0px 0px;
 }
@@ -443,7 +443,7 @@
 
 .scroll-bar > .increment-button:hover,
 .scroll-bar > .decrement-button:hover {
-    -fx-background-insets: 0 0 0 0, 0;
+    -fx-background-insets: 0;
     -fx-background-color: transparent;
 }
 
