--- a/docs/stylesheets/asciidoctor.css
+++ b/docs/stylesheets/asciidoctor.css
@@ -345,6 +345,8 @@ table.tableblock>.title,
 .ulist>.title,
 .qlist>.title,
 .hdlist>.title {
+    font-family: Roboto;
+    font-weight: bold;
     line-height: 1.45;
     color: #7a2518;
     font-weight: 400;
@@ -1178,7 +1180,8 @@ table.tableblock>.title,
 .hdlist>.title {
     text-rendering: optimizeLegibility;
     text-align: left;
-    /*font-family:"Noto Serif","DejaVu Serif",serif;*/
+    font-family: Roboto;
+    font-weight: bold;
     font-size: 1rem;
     font-style: italic
 }
