Remove tutorial images

--- a/src/main/resources/view/itinerary/ItineraryPage.fxml
+++ b/src/main/resources/view/itinerary/ItineraryPage.fxml
@@ -5,10 +5,10 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <VBox xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1">
-   <StackPane prefHeight="15.0" prefWidth="200.0" styleClass="stack-header" VBox.vgrow="NEVER">
+   <StackPane prefHeight="15.0" prefWidth="200.0" styleClass="stack-header">
       <children>
           <Label fx:id="itineraryTitle" styleClass="label-header" />
       </children>
    </StackPane>
-    <ListView fx:id="activityListView" VBox.vgrow="ALWAYS" minHeight="600"/>
+    <ListView fx:id="activityListView" minHeight="416"/>
 </VBox>
