--- a/src/main/resources/view/journal/JournalPage.fxml
+++ b/src/main/resources/view/journal/JournalPage.fxml
@@ -4,11 +4,11 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<VBox xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1" styleClass="vBox-journal">
-   <StackPane prefHeight="15.0" prefWidth="200.0" styleClass="stack-header" VBox.vgrow="NEVER">
+<VBox xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1">
+   <StackPane prefHeight="15.0" prefWidth="200.0" styleClass="stack-header" VBox.vgrow="ALWAYS">
       <children>
           <Label fx:id="journalTitle" styleClass="label-header" />
       </children>
    </StackPane>
-    <ListView fx:id="entryListView" VBox.vgrow="ALWAYS" minHeight="600"/>
+    <ListView fx:id="entryListView" minHeight="416"/>
 </VBox>
