--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -23,7 +23,7 @@
         <URL value="@Extensions.css" />
       </stylesheets>
 
-        <VBox>
+        <VBox VBox.vgrow="ALWAYS">
           <!--  MENU BAR  -->
           <MenuBar fx:id="menuBar" VBox.vgrow="NEVER">
             <Menu mnemonicParsing="false" text="File">
@@ -38,15 +38,15 @@
           </MenuBar>
 
           <!--  MAIN PANEL: THIS SWITCHES WITH EVERY NAVIGATION COMMAND -->
-          <ScrollPane fx:id="scrollPane" styleClass="edge-to-edge">
+          <ScrollPane fx:id="scrollPane" styleClass="edge-to-edge" minHeight="440">
             <VBox fx:id="mainPanel" minWidth="340" prefWidth="340" VBox.vgrow="ALWAYS">
-              <StackPane fx:id="mainPanelPlaceholder" VBox.vgrow="ALWAYS" />
+              <StackPane fx:id="mainPanelPlaceholder" VBox.vgrow="ALWAYS"/>
             </VBox>
           </ScrollPane>
 
 
           <!--  RESULT DISPLAY: APP FEEDBACK MESSAGES APPEAR HERE -->
-          <StackPane fx:id="resultDisplayPlaceholder" styleClass="stackPane-ResultBox" maxHeight="100" minHeight="100" prefHeight="100" VBox.vgrow="NEVER">
+          <StackPane fx:id="resultDisplayPlaceholder" styleClass="stackPane-ResultBox" maxHeight="100" minHeight="100" prefHeight="100" VBox.vgrow="ALWAYS">
             <padding>
               <Insets bottom="5" left="10" right="10" top="5" />
             </padding>
