--- a/src/main/resources/view/journal/JournalPageCard.fxml
+++ b/src/main/resources/view/journal/JournalPageCard.fxml
@@ -15,7 +15,7 @@
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="150.0" />
         </columnConstraints>
 
-        <VBox alignment="CENTER_LEFT" minHeight="130" GridPane.columnIndex="0">
+        <VBox alignment="CENTER_LEFT">
             <padding>
                 <Insets bottom="15" left="15" right="15" top="15" />
             </padding>
