--- a/src/main/resources/view/HelpWindow.fxml
+++ b/src/main/resources/view/HelpWindow.fxml
@@ -3,15 +3,13 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.Scene?>
 <?import javafx.stage.Stage?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.layout.StackPane?>
-<?import java.net.URL?>
-<?import javafx.scene.text.Text?>
 <fx:root resizable="true" title="Help" type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1">
     <icons>
         <Image url="@/images/help_icon.png"/>
@@ -20,7 +18,7 @@
     <Scene fx:id="scene">
          <VBox alignment="CENTER" style="-fx-background-color: #fff">
              <StackPane>
-                 <Label text="Help Window: Home Page" styleClass="label-header"/>
+                 <Label fx:id="helpWindowHeader" styleClass="label-header"/>
              </StackPane>
              <TextArea fx:id="textArea" styleClass="text-field" VBox.vgrow="ALWAYS"/>
 
